Fix the block toolbar not visible issue caused by tab buttons' z-index property

--- a/blocks/image-tabs/src/style.scss
+++ b/blocks/image-tabs/src/style.scss
@@ -1,6 +1,8 @@
 .wp-block-campuspress-child-image-tabs {
 	.__images {
 		display: flex;
+		position: relative;
+		z-index: 1;
 
 		> button {
 			align-items: center;
